[package]
name = "mmgame"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
ash = "0.31.0"
lazy_static = "1.4.0"
log = "0.4.11"
serde = "1.0.118"
serde_derive = "1.0.118"
tokio = { version = "1.0.1", features = ["full"] }
toml = "0.5.8"