[package]
name = "mmgame"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
erupt = "0.16.0+162"
lazy_static = "1.4.0"
log = "0.4.11"
serde = "1.0.118"
serde_derive = "1.0.118"
tokio = { version = "1.0.1", features = ["full"] }
toml = "0.5.8"

[target.'cfg(target_os="macos")'.dependencies]
metal = "0.17"
cocoa = "0.24"
objc  = "0.2"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "libloaderapi"] }
